--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <center>
             <ul class="menu1">
                 <li class="links"><a href="#home">Home</a></li>
-                <li class="links"><a href="#">Grid view</a></li>
+                <li class="links"><a href="#"></a></li>
                 <li class="links"><a href="#Grids">Grid view</a></li>
                 <li class="links"><a href="#">Slide view</a></li>
-                <li class="links"><a href="#Slides">Grid view</a></li>
+                <li class="links"><a href="#Slides"></a></li>
 
             </ul>
         </center>
@@ -138,7 +138,7 @@
                     <span class="sr-only">Previous</span>
                 </a>
                 <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron"></span>
+                    <span class="glyphicon glyphicon-chevron-right"></span>
 
                     <span class="sr-only">Next</span>
                 </a>
